--- a/Accompagnement.html
+++ b/Accompagnement.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Accompagnements - Renshuu</title>
+    <title>Accompagnements - Séances de zazen, méditation sans objet</title>
+    <meta name="description" content="Céline Jouenne vous accompagne pendant les séances de zazen, les ateliers d'approfondissement de la pratique et les séances individuelles de Leibthérapie">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
