--- a/Zazen&Leib.html
+++ b/Zazen&Leib.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Zazen - Renshuu</title>
+    <title>Zazen - Renshuu - Méditation sans objet, méditation Zen, Leibthérapie</title>
+    <meta name="description" content="Méditation sans objet appelée zazen, Leibthérapie, Zen, Centre Dürckheim, Jacques Castermane, Karlfried Graf Dürckheim.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
