--- a/Galerie.html
+++ b/Galerie.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Gallery - Renshuu</title>
+    <title>Galerie - Renshuu</title>
+    <meta name="description" content="Enseignement du Centre Dürckheim, Mirmande. De Karlfried Graf Dürckheim à Jacques Castermane, de coeur à coeur.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
