--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="col-md-6">
                         <h3>Méditation sans objet - Zazen</h3>
                         <div class="getting-started-info">
-                            <p>Les séances hebdomadaires de zazen durent 1h15. Plusieurs périodes de méditation sans objet se succèdent, entrecoupées par la marche lente que l'on appèle Kinhin. Prévoir une <strong>tenue souple</strong>. Participation de <strong>10 euros</strong>/ séance ou abonnement trimestriel. Venir 10 min en avance pour se changer et choisir son zafu.</p>
+                            <p>Les séances hebdomadaires de zazen durent 1h15. Plusieurs périodes de 15-20min de méditation sans objet se succèdent, entrecoupées par la marche lente que l'on appèle Kinhin. Prévoir une <strong>tenue souple</strong>. Participation de <strong>10 euros</strong>/ séance ou abonnement trimestriel. Venir 10 min en avance pour se changer et choisir son zafu.</p>
                         </div>
                     </div>
                 </div>
@@ -63,11 +63,11 @@
                 <div class="row justify-content-center">
                     <div class="col-md-5 feature-box">
                         <h4>Shikantaza</h4>
-                        <p>Shikantaza ? C'est seulement être assis, se concentrer sur le geste qu'est zazen. Ce n'est ne pas, ne pas manger, ne pas dormir. Pendant zazen, on ne peut pas sans cesse arrêter de penser, ce n'est pas possible. Parfois on pense, parfois on observe. Seulement, on le fait inconsciemment.</p>
+                        <p>Shikantaza ? C'est seulement être assis, se concentrer sur le geste qu'est zazen; c'est se plonger dans la sensation, le goût d'être simplement assis, tout comme le bébé est assis naturellement, sans effort et sans intention. Zazen c'est voir ce qu'il y a voir en ce moment, sans se laisser emporter par les pensées, le tourbillon du mental. Rien que être assis.</p>
                     </div>
                     <div class="col-md-5 feature-box">
                         <h4>Kinhin</h4>
-                        <p><span style="color: black;">Kinhin, c'est le zen dans l'action. Le menton est rentré comme en zazen, la colonne droite. On pousse le ciel avec le sommet du crâne. Les épaules sont détendues. Le regard est dans le prolongement de l'arrête du nez. Kodo Sawaki&nbsp;le maître de&nbsp;</span><a href="https://fr.wikipedia.org/wiki/Taisen_Deshimaru"><span style="color: black;">T</span></a>aisen Deshimaru<span style="color: black;">, disait&nbsp; que «&nbsp;le kinhin est la source de tous les&nbsp;pouvoirs magiques&nbsp;».</span></p>
+                        <p><span style="color: black;">Kinhin, c'est le zen dans l'action. Le menton est rentré comme en zazen, la colonne droite. On pousse le ciel avec le sommet du crâne. Les épaules sont détendues. Le regard est dans le prolongement de l'arrête du nez. Kodo Sawaki&nbsp;le maître de&nbsp;T</span>aisen Deshimaru<span style="color: black;">, disait&nbsp; que «&nbsp;le kinhin est la source de tous les&nbsp;pouvoirs magiques&nbsp;».</span></p>
                     </div>
                     <div class="col-md-5 feature-box">
                         <h4>Être debout</h4>
