--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                     <p>Tous les <strong>mardis</strong> de <strong>12h15</strong> à <strong>13h30</strong> au <strong>dojo Iokaï</strong> <strong>Vieux Port</strong>, 31 rue Saint-Saëns, 13001 Marseille.&nbsp;</p>
                 </div>
                 <div class="row align-items-center">
-                    <div class="col-md-6 text-center"><img class="img-thumbnail img-fluid" src="assets/img/scenery/djocentre.jpg"></div>
+                    <div class="col-md-6 text-center">
+                        <p class="text-center" style="font-size: 14px;">Grand Dojo Centre Dürckheim, Mirmande</p><img class="img-thumbnail img-fluid" src="assets/img/scenery/djocentre.jpg">
+                    </div>
                     <div class="col-md-6">
                         <h3>Méditation sans objet - Zazen</h3>
                         <div class="getting-started-info">
