--- a/Contact.html
+++ b/Contact.html
@@ -38,6 +38,12 @@
                     <p>Vous pouvez me contacter si vous avez des interrogations sur les séances hebdomadaires de zazen, les ateliers de pratique ou les séances individuelles de Leibthérapie, par téléphone (<a href="tel:+33664661107">06 64 66 11 07</a>) ou par mail (<a href="mailto:<zenetshiatsu@gmail.com>">zenetshiatsu@gmail.com</a>)</p>
                 </div>
             </div>
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info" style="color: rgb(59, 153, 224);">Ateliers de pratique et d'approfondissement Zazen et Exercices 2024</h2>
+                    <p>Samedis <strong>27 janvier</strong>, <strong>27 avril </strong>et <strong>8 juin</strong> de 14h à 17h au 151 Bd de la Libération, 13001 Marseille<br>Uniquement sur Inscription à <a href="mailto:<zenetshiatsu@gmail.com>">zenetshiatsu@gmail.com</a></p>
+                </div>
+            </div>
         </section><iframe allowfullscreen="" frameborder="0" loading="lazy" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDNwh1PLK3bxQLoJ5U4reo7_QDhkDDpWqw&amp;q=31+Rue+Saint+Sa%C3%ABns%2C+Marseille%2C+France&amp;zoom=30" width="100%" height="400"></iframe>
         <div class="container">
             <div class="row">
@@ -69,7 +75,7 @@
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts">
                 <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                    <p><span class="new-line-span">Dojo Iokai Vieux Port. 31 rue Saint Saëns</span> 13001 Marseille, France</p>
+                    <p><span class="new-line-span">Rdv Hebdo les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille, France</span><br>Ateliers Zazen et exercices : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;<br><br></p>
                 </div>
                 <div><i class="fa fa-phone footer-contacts-icon"></i>
                     <p class="footer-center-info email text-start"><a href="tel:+33664661107"> +33 64 66 11 07</a></p>
