--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 footer-contacts">
                     <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                        <p><span class="new-line-span">Dojo Iokai Vieux Port. 31 rue Saint Saëns</span> 13001 Marseille, France</p>
+                        <p><span class="new-line-span">Rdv Hebdo les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille, France</span><br>Ateliers Zazen et exercices : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;<br><br></p>
                     </div>
                     <div><i class="fa fa-phone footer-contacts-icon"></i>
                         <p class="footer-center-info email text-start"><a href="tel:+33664661107"> +33 64 66 11 07</a></p>
