--- a/Galerie.html
+++ b/Galerie.html
@@ -71,7 +71,7 @@
             </div>
             <div class="col-md-4 footer-about">
                 <h4>Renshuu</h4>
-                <p> Association loi 1901</p>
+                <p>SIRET : 97958533800010<br>RC Pro Abela Assurance</p>
                 <div class="social-links social-icons"><a href="https://www.facebook.com/profile.php?id=100085478023962"><i class="fa fa-facebook"></i></a></div>
             </div>
         </div>
