--- a/index.html
+++ b/index.html
@@ -103,32 +103,32 @@
                 </div>
             </div>
         </section>
-        <footer style="margin-bottom: 0px;">
-            <div class="row">
-                <div class="col-sm-6 col-md-4 text-center footer-navigation">
-                    <h4><a class="text-center" href="index.html" style="font-family: Montserrat, sans-serif;">Renshuu</a></h4>
-                    <p class="links"></p>
-                    <p class="company-name"></p>
+    </main>
+    <footer style="margin-bottom: 0px;">
+        <div class="row">
+            <div class="col-sm-6 col-md-4 text-center footer-navigation">
+                <h4><a class="text-center" href="index.html" style="font-family: Montserrat, sans-serif;">Renshuu</a></h4>
+                <p class="links"></p>
+                <p class="company-name"></p>
+            </div>
+            <div class="col-sm-6 col-md-4 footer-contacts">
+                <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
+                    <p><span class="new-line-span">Rdv Hebdo les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille, France</span><br>Ateliers Zazen et exercices : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;<br><br></p>
                 </div>
-                <div class="col-sm-6 col-md-4 footer-contacts">
-                    <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                        <p><span class="new-line-span">Rdv Hebdo les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille, France</span><br>Ateliers Zazen et exercices : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;<br><br></p>
-                    </div>
-                    <div><i class="fa fa-phone footer-contacts-icon"></i>
-                        <p class="footer-center-info email text-start"><a href="tel:+33664661107"> +33 64 66 11 07</a></p>
-                    </div>
-                    <div><i class="fa fa-envelope footer-contacts-icon"></i>
-                        <p> <a href="mailto:<zenetshaistu@gmail.com>" target="_blank">zenetshiatsu@gmail.com</a></p>
-                    </div>
+                <div><i class="fa fa-phone footer-contacts-icon"></i>
+                    <p class="footer-center-info email text-start"><a href="tel:+33664661107"> +33 64 66 11 07</a></p>
                 </div>
-                <div class="col-md-4 footer-about">
-                    <h4>Renshuu</h4>
-                    <p> Association loi 1901</p>
-                    <div class="social-links social-icons"><a href="https://www.facebook.com/profile.php?id=100085478023962"><i class="fa fa-facebook"></i></a></div>
+                <div><i class="fa fa-envelope footer-contacts-icon"></i>
+                    <p> <a href="mailto:<zenetshaistu@gmail.com>" target="_blank">zenetshiatsu@gmail.com</a></p>
                 </div>
             </div>
-        </footer>
-    </main>
+            <div class="col-md-4 footer-about">
+                <h4>Renshuu</h4>
+                <p>SIRET : 97958533800010<br>RC Pro Abela Assurance</p>
+                <div class="social-links social-icons"><a href="https://www.facebook.com/profile.php?id=100085478023962"><i class="fa fa-facebook"></i></a></div>
+            </div>
+        </div>
+    </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/baguetteBox.min.js"></script>
     <script src="assets/js/vanilla-zoom.js"></script>
