--- a/Accompagnement.html
+++ b/Accompagnement.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Accompagnements - Séances de zazen, méditation sans objet</title>
+    <link rel="canonical" href="https://renshuu.fr/Accompagnement.html">
+    <meta property="og:url" content="https://renshuu.fr/Accompagnement.html">
     <meta name="description" content="Céline Jouenne vous accompagne pendant les séances de zazen, les ateliers d'approfondissement de la pratique et les séances individuelles de Leibthérapie">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
