--- a/Galerie.html
+++ b/Galerie.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Galerie - Renshuu</title>
+    <link rel="canonical" href="https://renshuu.fr/Galerie.html">
+    <meta property="og:url" content="https://renshuu.fr/Galerie.html">
     <meta name="description" content="Enseignement du Centre Dürckheim, Mirmande. De Karlfried Graf Dürckheim à Jacques Castermane, de coeur à coeur.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
