--- a/Zazen&Leib.html
+++ b/Zazen&Leib.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Zazen - Renshuu - Méditation sans objet, méditation Zen, Leibthérapie</title>
+    <link rel="canonical" href="https://renshuu.fr/Zazen&amp;Leib.html">
+    <meta property="og:url" content="https://renshuu.fr/Zazen&amp;Leib.html">
     <meta name="description" content="Méditation sans objet appelée zazen, Leibthérapie, Zen, Centre Dürckheim, Jacques Castermane, Karlfried Graf Dürckheim.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
