--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Contact - Renshuu - Où nous trouver à Marseille</title>
+    <link rel="canonical" href="https://renshuu.fr/Contact.html">
+    <meta property="og:url" content="https://renshuu.fr/Contact.html">
     <meta name="description" content="Méditation sans objet à Marseille. Où nous trouver et comment nous contacter.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
