--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Renshuu - Meditation Zen, Meditation sans objet, Zazen, Leibthérapie, Marseille,</title>
+    <link rel="canonical" href="https://renshuu.fr/">
+    <meta property="og:url" content="https://renshuu.fr/">
     <meta name="description" content="Renshuu propose des séances de zazen, des ateliers de zazen et exercices, de la Leibthérapie, à Marseille.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
