--- a/Contact.html
+++ b/Contact.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Contact - Renshuu - Où nous trouver à Marseille</title>
-    <link rel="canonical" href="https://renshuu.fr/Contact.html">
-    <meta property="og:url" content="https://renshuu.fr/Contact.html">
     <meta name="description" content="Méditation sans objet à Marseille. Où nous trouver et comment nous contacter.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -42,7 +40,7 @@
             </div>
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info" style="color: rgb(59, 153, 224);">Ateliers de pratique et d'approfondissement Zazen et Exercices 2024</h2>
+                    <h2 class="text-info" style="color: rgb(59, 153, 224);">Session de pratique Zazen et exercices corporels en 2024</h2>
                     <p>Samedis <strong>27 janvier</strong>, <strong>27 avril </strong>et <strong>8 juin</strong> de 14h à 17h au 151 Bd de la Libération, 13001 Marseille<br>Uniquement sur Inscription à <a href="mailto:<zenetshiatsu@gmail.com>">zenetshiatsu@gmail.com</a></p>
                 </div>
             </div>
@@ -77,7 +75,7 @@
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts">
                 <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                    <p><span class="new-line-span">Rdv Hebdo les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille, France</span><br>Ateliers Zazen et exercices : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;<br><br></p>
+                    <p><span class="new-line-span">Rdv Hebdo les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille, France</span><br><span style="font-weight: normal !important;">Ateliers Zazen et exercices : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;</span></p>
                 </div>
                 <div><i class="fa fa-phone footer-contacts-icon"></i>
                     <p class="footer-center-info email text-start"><a href="tel:+33664661107"> +33 64 66 11 07</a></p>
