--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Renshuu - Meditation Zen, Meditation sans objet, Zazen, Leibthérapie, Marseille,</title>
-    <link rel="canonical" href="https://renshuu.fr/">
-    <meta property="og:url" content="https://renshuu.fr/">
     <meta name="description" content="Renshuu propose des séances de zazen, des ateliers de zazen et exercices, de la Leibthérapie, à Marseille.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -61,7 +59,7 @@
         <section class="clean-block features">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info">Ateliers de pratique et d'approfondissement</h2>
+                    <h2 class="text-info">Sessions de Zazen et exercices corporels</h2>
                     <p>Régulièrement dans l'année, des après-midi de pratique sont proposés. Ce temps est consacré à la recherche&nbsp;et l'approfondissement des gestes que sont l'assise, la marche, être debout, être allongé.</p>
                 </div>
                 <div class="row justify-content-center">
@@ -115,7 +113,7 @@
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts">
                 <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                    <p><span class="new-line-span">Rdv Hebdo les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille, France</span><br>Ateliers Zazen et exercices : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;<br><br></p>
+                    <p><span class="new-line-span">Rdv Hebdo les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille, France</span><br><span style="font-weight: normal !important;">Sessions Zazen et exercices : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;</span><br><br></p>
                 </div>
                 <div><i class="fa fa-phone footer-contacts-icon"></i>
                     <p class="footer-center-info email text-start"><a href="tel:+33664661107"> +33 64 66 11 07</a></p>
