--- a/Zazen&Leib.html
+++ b/Zazen&Leib.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Zazen - Renshuu - Méditation sans objet, méditation Zen, Leibthérapie</title>
-    <link rel="canonical" href="https://renshuu.fr/Zazen&amp;Leib.html">
-    <meta property="og:url" content="https://renshuu.fr/Zazen&amp;Leib.html">
     <meta name="description" content="Méditation sans objet appelée zazen, Leibthérapie, Zen, Centre Dürckheim, Jacques Castermane, Karlfried Graf Dürckheim.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -106,7 +104,7 @@
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts">
                 <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                    <p><span class="new-line-span">Rdv Hebdo les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille, France</span><br>Ateliers Zazen et exercices : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;<br><br></p>
+                    <p><span class="new-line-span">Rdv Hebdo les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille, France</span><br><span style="font-weight: normal !important;">Ateliers Zazen et exercices : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;</span></p>
                 </div>
                 <div><i class="fa fa-phone footer-contacts-icon"></i>
                     <p class="footer-center-info email text-start"><a href="tel:+33664661107"> +33 64 66 11 07</a></p>
