--- a/Contact.html
+++ b/Contact.html
@@ -35,12 +35,12 @@
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info" style="color: rgb(59, 153, 224);">Contact</h2>
-                    <p>Vous pouvez me contacter si vous avez des interrogations sur les séances hebdomadaires de zazen, les ateliers de pratique ou les séances individuelles de Leibthérapie, par téléphone (<a href="tel:+33664661107">06 64 66 11 07</a>) ou par mail (<a href="mailto:<zenetshiatsu@gmail.com>">zenetshiatsu@gmail.com</a>)</p>
+                    <p>Vous pouvez me contacter si vous avez des interrogations sur les séances hebdomadaires de zazen, les exercices corporels ou les séances individuelles de Leibthérapie, par téléphone (<a href="tel:+33664661107">06 64 66 11 07</a>) ou par mail (<a href="mailto:<zenetshiatsu@gmail.com>">zenetshiatsu@gmail.com</a>)</p>
                 </div>
             </div>
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info" style="color: rgb(59, 153, 224);">Session de pratique Zazen et exercices corporels en 2024</h2>
+                    <h2 class="text-info" style="color: rgb(59, 153, 224);">Sessions de pratique Zazen et exercices corporels en 2024</h2>
                     <p>Samedis <strong>27 janvier</strong>, <strong>27 avril </strong>et <strong>8 juin</strong> de 14h à 17h au 151 Bd de la Libération, 13001 Marseille<br>Uniquement sur Inscription à <a href="mailto:<zenetshiatsu@gmail.com>">zenetshiatsu@gmail.com</a></p>
                 </div>
             </div>
