--- a/Contact.html
+++ b/Contact.html
@@ -40,7 +40,7 @@
             </div>
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info" style="color: rgb(59, 153, 224);">Sessions de pratique Zazen et exercices corporels en 2024</h2>
+                    <h2 class="text-info" style="color: rgb(59, 153, 224);">Zazen et exercices corporels en 2024</h2>
                     <p>Samedis <strong>27 janvier</strong>, <strong>27 avril </strong>et <strong>8 juin</strong> de 14h à 17h au 151 Bd de la Libération, 13001 Marseille<br>Uniquement sur Inscription à <a href="mailto:<zenetshiatsu@gmail.com>">zenetshiatsu@gmail.com</a></p>
                 </div>
             </div>
