--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="col-md-6">
                         <h3>Méditation sans objet - Zazen</h3>
                         <div class="getting-started-info">
-                            <p>Les séances hebdomadaires de zazen durent 1h15. Plusieurs périodes de 15-20min de méditation sans objet se succèdent, entrecoupées par la marche lente que l'on appèle Kinhin. Prévoir une <strong>tenue souple</strong>. Participation de 10 euros/ séance ou abonnement trimestriel. Venir 10 min en avance pour se changer et choisir son zafu.</p>
+                            <p>Les séances hebdomadaires de zazen durent 1h15. Plusieurs périodes de 15-20 min de méditation sans objet se succèdent, entrecoupées par la marche lente que l'on appèle Kinhin. Prévoir une <strong>tenue souple</strong>. Participation de 10 euros/ séance ou abonnement trimestriel. Venir 10 min en avance pour se changer et choisir son zafu.</p>
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
         <section class="clean-block features">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info">Sessions de Zazen et exercices corporels</h2>
+                    <h2 class="text-info">Zazen et exercices corporels</h2>
                     <p>Des temps de pratique sont proposés à différents moments dans l'année. Ce temps est consacré à la recherche&nbsp;et l'approfondissement des gestes que sont l'assise, la marche, être debout, être allongé.</p>
                 </div>
                 <div class="row justify-content-center">
