--- a/Accompagnement.html
+++ b/Accompagnement.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info">Accompagnement</h2>
-                    <p>Les séances hebdomadaires de zazen, les exercices corporels et les séances individuelles de Leibthérapie sont accompagnés par Céline Jouenne, élève de Jacques Castermane, Centre Dürckheim, Mirmande, France.</p>
+                    <p>En 2022 Céline reçoit l'autorisation de Jacques Castermane de partager sa connaissance de la Voie tracée par Graf Dürckheim. Les séances hebdomadaires de zazen, les exercices corporels et les séances individuelles de Leibthérapie sont accompagnés par Céline Jouenne, élève de Jacques Castermane, Centre Dürckheim, Mirmande, France.</p>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-sm-6 col-lg-4">
