--- a/Accompagnement.html
+++ b/Accompagnement.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info">Accompagnement</h2>
-                    <p>En 2022 Céline reçoit l'autorisation de Jacques Castermane de partager sa connaissance de la Voie tracée par Graf Dürckheim. Les séances hebdomadaires de zazen, les exercices corporels et les séances individuelles de Leibthérapie sont accompagnés par Céline Jouenne, élève de Jacques Castermane, Centre Dürckheim, Mirmande, France.</p>
+                    <p>Céline suit l'enseignement auprès de Jacques Castermane au Centre Dürckheim. En 2022 elle&nbsp;reçoit l'autorisation de partager sa connaissance de la Voie tracée par Graf Dürckheim. Les séances hebdomadaires de zazen, les exercices corporels et les séances individuelles de Leibthérapie sont accompagnés par Céline Jouenne, élève de Jacques Castermane, Centre Dürckheim, Mirmande, France.</p>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-sm-6 col-lg-4">
@@ -81,7 +81,7 @@
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts">
                 <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                    <p><span class="new-line-span">Rdv Hebdo les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille, France</span><br><span style="font-weight: normal !important;">Zazen et exercices corporels : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;</span></p>
+                    <p><span class="new-line-span">Rdv hebdomadaires les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille</span><br><span style="font-weight: normal !important;">Zazen, exercices corporels et pratique intensive : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;</span></p>
                 </div>
                 <div><i class="fa fa-phone footer-contacts-icon"></i>
                     <p class="footer-center-info email text-start"><a href="tel:+33664661107"> +33 64 66 11 07</a></p>
