--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/Pretty-Footer-.css">
     <link rel="stylesheet" href="assets/css/vanilla-zoom.min.css">
@@ -23,11 +22,7 @@
         <div class="container"><a class="navbar-brand logo" href="index.html">RENSHUU</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link fs-6 active" href="index.html">ACCUEIL</a></li>
-                    <li class="nav-item"><a class="nav-link fs-6" href="Zazen&amp;Leib.html">Zazen &amp; leibtherapie</a></li>
-                    <li class="nav-item"><a class="nav-link fs-6" href="Accompagnement.html">Accompagnement</a></li>
-                    <li class="nav-item"><a class="nav-link fs-6" href="Galerie.html">GALERIE</a></li>
-                    <li class="nav-item"><a class="nav-link fs-6" href="Contact.html">infos &amp; ContacT</a></li>
+                    <li class="nav-item"><a class="nav-link fs-6" href="Contact.html">ContacT</a></li>
                 </ul>
             </div>
         </div>
@@ -35,102 +30,11 @@
     <main class="page landing-page">
         <section class="clean-block clean-hero" style="color: rgba(222,229,232,0.85);background: url(&quot;assets/img/fond-jardin-japonais-zen_118047-1334.avif&quot;), rgba(255,255,255,0.28);border-color: rgba(248,249,249,0.85);">
             <div class="text">
-                <h2 class="fw-bold">Il y a un temps intérieur qui n'a rien à voir avec le temps mesuré.</h2>
-                <p class="fw-semibold">Karlfried Graf Dürckheim</p>
-            </div>
-        </section>
-        <section class="clean-block clean-info dark">
-            <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info">Séance hebdomadaire de zazen</h2>
-                    <p>Tous les <strong>mardis</strong> de <strong>12h15</strong> à <strong>13h30</strong> au <strong>dojo Iokaï</strong> <strong>Vieux Port</strong>, 31 rue Saint-Saëns, 13001 Marseille.&nbsp;</p>
-                </div>
-                <div class="row align-items-center">
-                    <div class="col-md-6 text-center">
-                        <p class="text-center" style="font-size: 14px;">Grand Dojo Centre Dürckheim, Mirmande</p><img class="img-thumbnail img-fluid" src="assets/img/scenery/djocentre.jpg">
-                    </div>
-                    <div class="col-md-6">
-                        <h3>Méditation sans objet - Zazen</h3>
-                        <div class="getting-started-info">
-                            <p>Les séances hebdomadaires de zazen durent 1h15. Plusieurs périodes de 15-20 min de méditation sans objet se succèdent, entrecoupées par la marche lente que l'on appèle Kinhin. Prévoir une <strong>tenue souple</strong>. Participation de 10 euros/ séance ou abonnement trimestriel. Venir 10 min en avance pour se changer et choisir son zafu.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="clean-block features">
-            <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info">Zazen et exercices corporels</h2>
-                    <p>Des temps de pratique sont proposés à différents moments dans l'année. Ce temps est consacré à la recherche&nbsp;et l'approfondissement des gestes que sont l'assise, la marche, être debout, être allongé.</p>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-md-5 feature-box">
-                        <h4>Shikantaza</h4>
-                        <p>Shikantaza ? C'est seulement être assis, se concentrer sur le geste qu'est zazen; c'est se plonger dans la sensation, le goût d'être simplement assis, tout comme le bébé est assis naturellement, sans effort et sans intention. Zazen c'est voir ce qu'il y a voir en ce moment, sans se laisser emporter par les pensées, le tourbillon du mental. Rien que être assis.</p>
-                    </div>
-                    <div class="col-md-5 feature-box">
-                        <h4>Kinhin</h4>
-                        <p><span style="color: black;">Kinhin, c'est le zen dans l'action. Le menton est rentré comme en zazen, la colonne droite. On pousse le ciel avec le sommet du crâne. Les épaules sont détendues. Le regard est dans le prolongement de l'arrête du nez. Kodo Sawaki&nbsp;le maître de&nbsp;T</span>aisen Deshimaru<span style="color: black;">, disait&nbsp; que «&nbsp;le kinhin est la source de tous les&nbsp;pouvoirs magiques&nbsp;».</span></p>
-                    </div>
-                    <div class="col-md-5 feature-box">
-                        <h4>Être debout</h4>
-                        <p>Être debout, simplement, dans la tenue juste, la forme juste et le juste rythme de l'inspire et de l'expire. Comment je me sens être debout, là, en ce moment.&nbsp;</p>
-                    </div>
-                    <div class="col-md-5 feature-box">
-                        <h4>Être allongé</h4>
-                        <p>Il y a une manière plus juste d'être allongé, qui révèle une détente profonde du corps entier qui se donne, qui s'abandonne à l'acte, l'action, le geste "être allongé".</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="clean-block slider dark" style="margin-bottom: -82px;">
-            <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info">La Voie de l'action</h2>
-                    <p>Le <strong>Chemin du Zen</strong><br>est un chemin de connaissance de soi, de découverte du vrai soi-même par la<br>pratique régulière de la méditation sans objet appelée zazen.</p>
-                </div>
-                <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/scenery/71472315500__2C77A7B2-FC3D-42C4-A048-CB7BF688BB5D.fullsizerender.jpg" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/scenery/IMG_2601.jpg" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/scenery/IMG_2602.jpg" alt="Slide Image"></div>
-                    </div>
-                    <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
-                    <ol class="carousel-indicators">
-                        <li data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></li>
-                        <li data-bs-target="#carousel-1" data-bs-slide-to="1"></li>
-                        <li data-bs-target="#carousel-1" data-bs-slide-to="2"></li>
-                    </ol>
-                </div>
+                <h2 class="fw-bold">Encore un pas pour me joindre et obtenir des renseignements : <br>06 64 66 11 07 ou zenetshiatsu@gmail.com</h2>
+                <p class="fw-semibold">Merci. <br>Céline Jouenne</p>
             </div>
         </section>
     </main>
-    <footer style="margin-bottom: 0px;">
-        <div class="row">
-            <div class="col-sm-6 col-md-4 text-center footer-navigation">
-                <h4><a class="text-center" href="index.html" style="font-family: Montserrat, sans-serif;">Renshuu</a></h4>
-                <p class="links"></p>
-                <p class="company-name"></p>
-            </div>
-            <div class="col-sm-6 col-md-4 footer-contacts">
-                <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                    <p><span class="new-line-span">Rdv hebdomadaires les mardis : Dojo Iokai Vieux Port. 31 rue Saint Saëns 13001 Marseille</span><br><span style="font-weight: normal !important;">Zazen, exercices corporels et pratique intensive : Le Chant du Voisin. 151 Bd de la Libération, 13001 Marseille&nbsp;</span></p>
-                </div>
-                <div><i class="fa fa-phone footer-contacts-icon"></i>
-                    <p class="footer-center-info email text-start"><a href="tel:+33664661107"> +33 64 66 11 07</a></p>
-                </div>
-                <div><i class="fa fa-envelope footer-contacts-icon"></i>
-                    <p> <a href="mailto:<zenetshaistu@gmail.com>" target="_blank">zenetshiatsu@gmail.com</a></p>
-                </div>
-            </div>
-            <div class="col-md-4 footer-about">
-                <h4>Renshuu</h4>
-                <p>SIRET : 97958533800010<br>RC Pro Abela Assurance</p>
-                <div class="social-links social-icons"><a href="https://www.facebook.com/profile.php?id=100085478023962"><i class="fa fa-facebook"></i></a></div>
-            </div>
-        </div>
-    </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/baguetteBox.min.js"></script>
     <script src="assets/js/vanilla-zoom.js"></script>
