--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="clean-block clean-hero" style="color: rgba(222,229,232,0.85);background: url(&quot;assets/img/fond-jardin-japonais-zen_118047-1334.avif&quot;), rgba(255,255,255,0.28);border-color: rgba(248,249,249,0.85);">
             <div class="text">
                 <h2 class="fw-bold">06 64 66 11 07 ou zenetshiatsu@gmail.com</h2>
-                <p class="fw-semibold">Merci. <br>Céline Jouenne</p>
+                <p class="fw-semibold"><br>Céline Jouenne</p>
             </div>
         </section>
     </main>
