--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Renshuu - Meditation Zen, Meditation sans objet, Zazen, Leibthérapie, Marseille,</title>
+    <title>Renshuu - Meditation sans objet, Marseille,</title>
     <link rel="canonical" href="https://renshuu.fr/">
     <meta property="og:url" content="https://renshuu.fr/">
-    <meta name="description" content="Renshuu propose des séances de zazen, des ateliers de zazen et exercices, de la Leibthérapie, à Marseille.">
+    <meta name="description" content="Renshuu propose des assises tous les mardis au dojo Iokai à Marseille.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
