--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container"><a class="navbar-brand logo" href="index.html">RENSHUU</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link fs-6" href="Contact.html">ContacT</a></li>
+                    <li class="nav-item"></li>
                 </ul>
             </div>
         </div>
