--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Renshuu - Meditation sans objet, Marseille,</title>
     <link rel="canonical" href="https://renshuu.fr/">
     <meta property="og:url" content="https://renshuu.fr/">
-    <meta name="description" content="Renshuu propose des assises tous les mardis au dojo Iokai à Marseille.">
+    <meta name="description" content="Renshuu propose des assises tous les mardis au dojo Iokai à Marseille, 31 Rue St. Saens, 13001 Marseille. 12:15 à 13h30.
+Renseignements au 0664661107 ou zenetshiatsu@gmail.com">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
