--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Renseignements au 0664661107 ou zenetshiatsu@gmail.com">
     <main class="page landing-page">
         <section class="clean-block clean-hero" style="color: rgba(222,229,232,0.85);background: url(&quot;assets/img/fond-jardin-japonais-zen_118047-1334.avif&quot;), rgba(255,255,255,0.28);border-color: rgba(248,249,249,0.85);">
             <div class="text">
-                <h2 class="fw-bold">06 64 66 11 07 ou zenetshiatsu@gmail.com</h2>
+                <h2 class="fw-bold">Assise en silence tous les mardis de 12h15 à 13h15 au Dojo Iokai, 31 rue Saint Saëns, 13001 Marseille. <br><br>Renseignements au 06 64 66 11 07 ou zenetshiatsu@gmail.com</h2>
                 <p class="fw-semibold"><br>Céline Jouenne</p>
             </div>
         </section>
